# nsg-library

./: .gitignore  .gitmodules  .qmake.conf  .tags  .tags_sorted_by_file  .travis.yml  .vimrc  Android.Linux.cmake  Android.Windows.cmake  AndroidBuild.bat  AndroidBuild.sh  CMakeLists.txt  CMakeLists.txt.user.22c40a5  LICENSE.md  License.txt  Main.cpp  Makefile  NaClBuild.bat  NaClBuild.sh  NaClBuildLinux.sh  NaClBuildOSX.sh  NaClMain.cpp  PNaCl.Linux.cmake  PNaCl.OSX.cmake  PNaCl.Windows.cmake  ProjectHome.md  README.md  Readme.txt  appveyor.yml  base.mk  cmake_and.bat  cmake_and.sh  cmake_android.bat  cmake_android.sh  cmake_clean_data.sh  cmake_codeblocks.sh  cmake_coverity.bat  cmake_ems.bat  cmake_ems.sh  cmake_ios.sh  (+24 more)
NSG/: Android3DInstance.cpp  App.cpp  App.h  AppAndroid.cpp  AppDelegate.h  AppDelegate.m  AppGeneral.cpp  AppNaCl.cpp  AppNaCl.h  AppSDL.cpp  Behavior.cpp  Behavior.h  BoxMesh.cpp  BoxMesh.h  CMakeLists.txt  Camera.cpp  Camera.h  Check.h  Constants.cpp  Constants.h  Context.cpp  Context.h  FSM.cpp  FSM.h  FrameColorSelection.cpp  FrameColorSelection.h  FreeType.cpp  FreeType.h  GLES2BoxMesh.cpp  GLES2BoxMesh.h  GLES2Buffer.cpp  GLES2Buffer.h  GLES2Camera.cpp  GLES2Camera.h  GLES2CircleMesh.cpp  GLES2CircleMesh.h  GLES2EllipseMesh.cpp  GLES2EllipseMesh.h  GLES2FShader.cpp  GLES2FShader.h  (+116 more)
NSG/animation/: Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  AnimationState.cpp  AnimationState.h
NSG/app/: App.cpp  App.h  AppAndroid.cpp  AppConfiguration.cpp  AppConfiguration.h  AppData.cpp  AppData.h  AppGLFW.cpp  AppGeneral.cpp  AppListeners.h  AppNaCl.cpp  AppNaCl.h  AppSDL.cpp  AppSDLEmscripten.cpp  AppStatistics.cpp  AppStatistics.h  Behavior.cpp  Behavior.h  Context.cpp  Context.h  EmscriptenWindow.cpp  EmscriptenWindow.h  Engine.cpp  Engine.h  ExternalWindow.h  LinuxWindow.cpp  LinuxWindow.h  Main.cpp  Main.h  NSG.h  OSXWindow.cpp  OSXWindow.h  OSXWindow.mm  Object.cpp  Object.h  SDLWindow.cpp  SDLWindow.h  WinWindow.cpp  WinWindow.h  Window.cpp  (+1 more)
NSG/audio/: Audio.cpp  Audio.h  Music.cpp  Music.h  Sound.cpp  Sound.h
NSG/behaviors/: Behavior.cpp  Behavior.h  CameraControl.cpp  CameraControl.h  RotateAroundPoint.cpp  RotateAroundPoint.h
NSG/buffers/: Buffer.cpp  Buffer.h  BufferManager.cpp  BufferManager.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  InstanceBuffer.cpp  InstanceBuffer.h  VertexArrayObj.cpp  VertexArrayObj.h  VertexBuffer.cpp  VertexBuffer.h
NSG/editor/: Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  EditorFrustum.cpp  EditorFrustum.h  EditorLight.cpp  EditorLight.h  EditorSceneNode.cpp  EditorSceneNode.h
NSG/filters/: Filter.cpp  Filter.h  FilterBlend.cpp  FilterBlend.h  FilterBlur.cpp  FilterBlur.h  GLES2Filter.cpp  GLES2Filter.h  GLES2FilterBlend.cpp  GLES2FilterBlend.h  GLES2FilterBlur.cpp  GLES2FilterBlur.h
NSG/font/: Font.cpp  Font.h  FontAtlas.cpp  FontAtlas.h  FontTTFAtlas.cpp  FontTTFAtlas.h  FontXMLAtlas.cpp  FontXMLAtlas.h
NSG/graphics/: Animation.cpp  Animation.h  AnimationState.cpp  AnimationState.h  Batch.cpp  Batch.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  ExtraUniforms.h  Filter.cpp  Filter.h  FragmentShader.cpp  FragmentShader.h  FrameBuffer.cpp  FrameBuffer.h  FrameColorSelection.cpp  FrameColorSelection.h  Frustum.cpp  Frustum.h  GLES2Includes.h  GLIncludes.h  GPUObject.cpp  GPUObject.h  GUI.cpp  GUI.h  Graphics.cpp  Graphics.h  InstanceData.cpp  InstanceData.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Node.cpp  (+45 more)
NSG/imgui/: IMGUI.cpp  IMGUI.h  IMGUIArea.cpp  IMGUIArea.h  IMGUIButton.cpp  IMGUIButton.h  IMGUICheckButton.cpp  IMGUICheckButton.h  IMGUIContext.cpp  IMGUIContext.h  IMGUIHSliderThumb.cpp  IMGUIHSliderThumb.h  IMGUILabel.cpp  IMGUILabel.h  IMGUILayoutManager.cpp  IMGUILayoutManager.h  IMGUILine.cpp  IMGUILine.h  IMGUINode.cpp  IMGUIObject.cpp  IMGUIObject.h  IMGUISizer.cpp  IMGUISizer.h  IMGUISkin.cpp  IMGUISkin.h  IMGUIState.cpp  IMGUIState.h  IMGUIStyle.cpp  IMGUIStyle.h  IMGUIText.cpp  IMGUIText.h  IMGUITextManager.cpp  IMGUITextManager.h  IMGUITitle.cpp  IMGUITitle.h  IMGUIVSliderThumb.cpp  IMGUIVSliderThumb.h  IMGUIWindow.cpp  IMGUIWindow.h
NSG/loaders/: LoaderApp.cpp  LoaderApp.h  LoaderXML.cpp  LoaderXML.h  LoaderXMLNode.cpp  LoaderXMLNode.h
NSG/logic/: CameraControl.cpp  CameraControl.h  FollowCamera.cpp  FollowCamera.h  PlayerControl.cpp  PlayerControl.h  ShadowMapDebug.cpp  ShadowMapDebug.h
NSG/material/: GLES2Material.cpp  GLES2Material.h  Material.cpp  Material.h  ModelMaterial.cpp  ModelMaterial.h
NSG/maths/: BoundingBox.cpp  BoundingBox.h  Maths.cpp  Maths.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  PointOnSphere.cpp  PointOnSphere.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
NSG/meshes/: BoxMesh.cpp  BoxMesh.h  CircleMesh.cpp  CircleMesh.h  CylinderMesh.cpp  CylinderMesh.h  EllipseMesh.cpp  EllipseMesh.h  FrustumMesh.cpp  FrustumMesh.h  GLES2BoxMesh.cpp  GLES2BoxMesh.h  GLES2CircleMesh.cpp  GLES2CircleMesh.h  GLES2EllipseMesh.cpp  GLES2EllipseMesh.h  GLES2Mesh.cpp  GLES2Mesh.h  GLES2ModelMesh.cpp  GLES2ModelMesh.h  GLES2PlaneMesh.cpp  GLES2PlaneMesh.h  GLES2RectangleMesh.cpp  GLES2RectangleMesh.h  GLES2RoundedRectangleMesh.cpp  GLES2RoundedRectangleMesh.h  GLES2SphereMesh.cpp  GLES2SphereMesh.h  IcoSphereMesh.cpp  IcoSphereMesh.h  LinesMesh.cpp  LinesMesh.h  Mesh.cpp  Mesh.h  ModelMesh.cpp  ModelMesh.h  PlaneMesh.cpp  PlaneMesh.h  ProceduralMesh.cpp  ProceduralMesh.h  (+12 more)
NSG/network/: HTTPRequest.cpp  HTTPRequest.h
NSG/nodes/: Bone.cpp  (+19 more)
Test/: App.cpp  App.h  CMakeLists.txt  CameraBehavior.cpp  CameraBehavior.h  CubeBehavior.cpp  CubeBehavior.h  EarthBehavior.cpp  EarthBehavior.h  FSMExamples.cpp  FSMTest.cpp  LightBehavior.cpp  LightBehavior.h  Main.cpp  Makefile  ModelBehavior.cpp  ModelBehavior.h  MyApp.cpp  MyApp.h  NaClApp.cpp  NaClApp.h  NodeTest.cpp  QueuedTaskTest.cpp  TextBehavior.cpp  TextBehavior.h  TimedTaskTest.cpp
(+1275 files in other folders)
